--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Slider</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
